fix broken styles on get started modal

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -462,6 +462,10 @@ div.q-input {
     min-height: 0
   }
 
+.q-btn__wrapper:before {
+  box-shadow: none
+}
+
 .receive-copy-btn .q-btn__wrapper {
     padding: 0;
     min-height: 0
